log
Thu 04 May 2023 10:44:43 AM UTC: 
 tests:  0|5
total_score: 0/70
2d9a614
Thu 04 May 2023 04:41:41 PM UTC: 
 sudoku.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
 tests:  2|4
total_score: 15/70
6f838e4
Thu 04 May 2023 05:35:37 PM UTC: 
 sudoku.c | 26 ++++++++++++++++++++++++--
 1 file changed, 24 insertions(+), 2 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:50:9: error: unused variable ‘columnas’ [-Werror=unused-variable]
   50 |     int columnas[10]={0,0,0,0,0,0,0,0,0,};
      |         ^~~~~~~~
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
test.c:263: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
a2d8387
Thu 04 May 2023 05:36:21 PM UTC: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
test.c: In function ‘is_valid’:
test.c:245:5: error: ‘main’ is normally a non-static function [-Werror=main]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:262:1: error: expected declaration or statement at end of input
  262 | }
      | ^
test.c:263: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:245:5: error: ‘main’ defined but not used [-Werror=unused-function]
  245 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:7:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
a6bb26c
Thu 04 May 2023 05:36:39 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:72:1: error: control reaches end of non-void function [-Werror=return-type]
   72 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
14ee9dd
Thu 04 May 2023 05:36:56 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|3
total_score: 35/70
bd0d691
Thu 04 May 2023 08:02:45 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
6c86585
Fri 05 May 2023 06:56:08 PM UTC: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:47:9: error: unused variable ‘k’ [-Werror=unused-variable]
   47 |   int l,k,i,j, numColumna, num;
      |         ^
sudoku.c:47:7: error: unused variable ‘l’ [-Werror=unused-variable]
   47 |   int l,k,i,j, numColumna, num;
      |       ^
cc1: all warnings being treated as errors
Compilation failed
9539daf
Fri 05 May 2023 06:56:21 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
c73f506
